# ChangeLog for dev-python/fabric
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/fabric/ChangeLog,v 1.55 2015/02/16 14:01:36 pacho Exp $

  16 Feb 2015; Pacho Ramos <pacho@gentoo.org> fabric-1.10.0-r1.ebuild:
  amd64/x86 stable, bug #530324

*fabric-1.10.1 (07 Feb 2015)

  07 Feb 2015; Ian Delaney <idella4@gentoo.org> +fabric-1.10.1.ebuild,
  fabric-1.10.0-r1.ebuild:
  bump

*fabric-1.10.0-r1 (25 Nov 2014)

  25 Nov 2014; Mike Gilbert <floppym@gentoo.org> +fabric-1.10.0-r1.ebuild,
  -fabric-1.9.0.ebuild, -fabric-1.9.1.ebuild:
  Remove upper bound on dev-python/paramiko dep, bug 528154.

  07 Nov 2014; Ian Delaney <idella4@gentoo.org> fabric-1.10.0.ebuild:
  ditto to fabric-1.10.0.ebuild wrt Bug #528154

  06 Nov 2014; Ian Delaney <idella4@gentoo.org> fabric-1.9.1.ebuild:
  Set required bordering to dep paramiko, fixes Bug #528154

  08 Oct 2014; Ian Delaney <idella4@gentoo.org> fabric-1.10.0.ebuild:
  remove erronoeous test bug from test phase

*fabric-1.10.0.ebuild

  19 Sep 2014; Ian Delaney <idella4@gentoo.org> +fabric-1.10.0.ebuild,
  -fabric-1.1.1.ebuild, -fabric-1.2.2.ebuild, -fabric-1.4.0.ebuild,
  -fabric-1.4.1.ebuild, -fabric-1.4.2-r1.ebuild, -fabric-1.4.3.ebuild,
  -fabric-1.5.1.ebuild, -fabric-1.5.2.ebuild, -fabric-1.5.3.ebuild,
  -fabric-1.6.0-r1.ebuild, -fabric-1.6.1-r1.ebuild, -fabric-1.7.0.ebuild,
  -fabric-1.8.0.ebuild, -fabric-1.8.2.ebuild, -fabric-1.8.2.ebuild,
  -fabric-1.8.3.ebuild
  bump; update deps, doc build, test phase, remove many old

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> fabric-1.1.1.ebuild,
  fabric-1.2.2.ebuild, fabric-1.4.0.ebuild, fabric-1.4.1.ebuild,
  fabric-1.4.2-r1.ebuild, fabric-1.4.3.ebuild, fabric-1.5.0.ebuild,
  fabric-1.5.1.ebuild, fabric-1.5.2.ebuild, fabric-1.5.3.ebuild,
  fabric-1.6.0-r1.ebuild, fabric-1.6.1-r1.ebuild, fabric-1.7.0.ebuild,
  fabric-1.8.0.ebuild, fabric-1.8.1.ebuild, fabric-1.8.2.ebuild,