@@ -8,6 +8,6 @@ KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh
 LICENSE=GPL-3
 RDEPEND=!static? ( acl? ( sys-apps/acl ) caps? ( sys-libs/libcap ) gmp? ( dev-libs/gmp ) xattr? ( !userland_BSD? ( sys-apps/attr ) ) ) selinux? ( sys-libs/libselinux ) nls? ( virtual/libintl ) !app-misc/realpath !<sys-apps/util-linux-2.13 !sys-apps/stat !net-mail/base64 !sys-apps/mktemp !<app-forensics/tct-1.18-r1 !<net-fs/netatalk-2.0.3-r4 !<sci-chemistry/ccp4-6.1.1
 SLOT=0
-SRC_URI=mirror://gnu/coreutils/coreutils-8.24.tar.xz mirror://gentoo/coreutils-8.24-patches-1.0.tar.xz http://dev.gentoo.org/~vapier/dist/coreutils-8.24-patches-1.0.tar.xz mirror://gentoo/coreutils-8.24-man.tar.xz http://dev.gentoo.org/~vapier/dist/coreutils-8.24-man.tar.xz
+SRC_URI=mirror://gnu/coreutils/coreutils-8.24.tar.xz mirror://gentoo/coreutils-8.24-patches-1.1.tar.xz http://dev.gentoo.org/~vapier/dist/coreutils-8.24-patches-1.1.tar.xz mirror://gentoo/coreutils-8.24-man.tar.xz http://dev.gentoo.org/~vapier/dist/coreutils-8.24-man.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=9cd99a04306e4195fc4f5a406ca3ed37
+_md5_=de453fad2648b481b0e65b29ece3cc78
