@@ -14,30 +14,30 @@ DIST coreutils-8.23-man.tar.xz 43060 SHA256 d1b16e74b3dba4f313aeebae2c69da205f7d
 DIST coreutils-8.23-patches-1.1.tar.xz 6480 SHA256 daf5d61b36db61d629bf14bf8f04e878f1205c9ae2af5daf37dca3aad5a6fde4 SHA512 8da5f8e9fc47baa060030076c4a2de90013a0d1faad45fe99545e93d50bc079720281f6db5774590fe842c8c56bd8ae97e1d9bf862fae1896760b5e5b686e7a8 WHIRLPOOL 2a8082975e3627454569e57aecb3d1ac6bdef89e16f4f64a88a4ffcbf2b341fe56874b128485ae540270f7a060f9e0f4bd3eecf68e215fb6a5a1c5ac434f7403
 DIST coreutils-8.23.tar.xz 5375612 SHA256 ec43ca5bcfc62242accb46b7f121f6b684ee21ecd7d075059bf650ff9e37b82d SHA512 a5f4b82ce208cb439d5dbe6f5cf4b19fecff581da210a51c4e3fdd5ffab114d171456d041e20a6996b59185947ac6655096e4b5ca252186e282ae0ae08b7534c WHIRLPOOL 4bd4cd28d6de96218e791c5ed15766e34dfeeb3aeade10e211e3a0e9ffa695e5a716872a915d78b356b3e3635e1e22274d92560301aadaf46a58242dc235d733
 DIST coreutils-8.24-man.tar.xz 42920 SHA256 cf0333b5f134a331e0b46e2ddf90666f8bdc3281c1ca2c7ccbb75b437589ce37 SHA512 9dfe614402bc35c43301ebf97d2d36ac5db1433f48171bda15f2ba76bd9944742665b30a764df0cf773ebcad1845aae57c8e36a1cd3848c1e82a7c996d6cc78a WHIRLPOOL d702a372031fe52262204c00bee641084c099c45150d82abd5915535ab3bbe1efb63c4f00173bb88725ba49126a6ecf368d14b12843b570c08165b757b78710b
-DIST coreutils-8.24-patches-1.0.tar.xz 6588 SHA256 33a2e0ab51f69398557fec6d7014764e7323cbc501f9979966ee4107728141ae SHA512 69686fd557e946b9ea7974d4a2f70a5392b69209393696988082e60b4e6277286cf1d9b6df242ecc94e407853e32a9f5d81b55774dfa3c7ccdfb2c1188bda11f WHIRLPOOL 00d1a6290c47ea117edb8c3975841a7c5557a7ab17afb287081d058eb992c9082971e31fa113f0152f6e49c5a700d400a96f988069f50fc72c71ef76c5eafb42
+DIST coreutils-8.24-patches-1.1.tar.xz 6688 SHA256 79cb0dc5b58cb97e17b11b5e821ed88fae88f728d9fd07986bbb397824e49c6f SHA512 cf340ccb918e307be8bbfd19a299bcfe5b295a26f59a8eeb8657f5dda1361100a350e996b31097948e63890987a2f83d05d2e7175c6304f4a4812b9974679c2c WHIRLPOOL 3b4d4676b119e4f22a01c8450be13d6eb40720d3c57aac5631454df24814943e6e6024fbdcd27a2b262d42c1446d9c04cbdc163371ff20a4b28d9cd9a77c5c9c
 DIST coreutils-8.24.tar.xz 5649896 SHA256 a2d75286a4b9ef3a13039c2da3868a61be4ee9f17d8ae380a35a97e506972170 SHA512 b42bb233340353647bb9a1c3d9122c1a5379cf3602ba9197c3c935fc899897e7d4685148dfaf93eccc096bee0a9b03416d79dc9bb81d5d2dea6e04ed134a3d1b WHIRLPOOL 68598e0c93375522714b9bc0dd092386a9466725b2b4b5715e2926c5087e1ce887d5e5b8e0b872347a053edcb39ba1f8c6949ee659a06ed554703a0ba07064e2
 EBUILD coreutils-8.20.ebuild 5884 SHA256 b4513676d9e4479a80b891d5586a66200c845e1be0537f5a3e554cebc4efc780 SHA512 889a107a2ceb85877749ed911e33e5ab47b31a7d2a952493b1e2a44395e18758f8f7d4e59708b7b5168957a89f5da3a2887125ffb6a61a8fb0c1c6326ecb819e WHIRLPOOL 65b636b8fe4f3d35cb26698d6f9e468ceea538f197ed08b3b27ef049037291f7d786c2a161b7a53bbc0828f75fdd43d40bd3461bcd5f6a23786cd901d4a1c0b9
 EBUILD coreutils-8.21.ebuild 6007 SHA256 f8bd0ef05a48bb1832a537fd066de878e3aa9abf92640d8e904eefc7b7fe2676 SHA512 c1801a06fd9061f7fc8ef3c0e7880b2edca02bb8f0087c6890bb550a2c709ff555d0cd26e3819e524d010306d2d12f597b1d128eb85d8cd6cf98efee560b9f4d WHIRLPOOL d9137957b902a1ded882ad83ed26c71d7e5deb05df1dc4b93af2b22282554dbe9d1642db303c41bab5fb75c42f36fb36c6c193998f395f460087a07f44e9dea2
 EBUILD coreutils-8.22-r1.ebuild 5651 SHA256 cd13fab564325e27e72d0626695b89f822b285c7ef8f7de59859d29f2704b0bc SHA512 14ab837717e4fc99f020ce1577152013254451ca4d5538203764efac5ed0bc4491844d6928b7ca9f49b292557f79ee3b6bbf2f3bdeadea1a4739a89f563e7d8a WHIRLPOOL f255a5d7db095e61d2a12568b2d231278153157c49488061c668a39a7636935e1e98cdc7c2678143b38bf3a3b31ab843c3be0cfe57911648023e7b6b84671b4e
 EBUILD coreutils-8.22.ebuild 5954 SHA256 8112079942b2f1098118f3ca5d1764649933c82212009e4e959c537e69424606 SHA512 c089bec9a24c58ac3920a2ced3a72029386d15528176cc42a8b0295b0d17d695ceb2008a0ae043d259e04587a045bd640b475c77903dbe91bbda979638f1359a WHIRLPOOL 4aaa054cefed7b105812f5fcf07e6e33d6abb968df1e13b3d8ac97a06a6d979c9ff2bbcf08a6afbe87f2094229e2a895553f7ea7b0349017327f6879dda76961
 EBUILD coreutils-8.23.ebuild 5781 SHA256 e4fd5c33674aa6c9b5871896eb87b0ffd65b59d738ce8ebad7872037512889a5 SHA512 50ab40fb769370671f0cd66f6bf8eae0c742e69987ee5bc69418554cf524d9b2508bc3d68b673abe50caa9f45c5d8d892433c25b60a2b1f01937a799051aaf6d WHIRLPOOL da6d17ec96b15fd6e1e54fc068888fbcb4593b099c45c424e2868796de70f1fd1b2051cfc15fe706f0933c23c245d274903542f17372acd6ad2ccc5e7205d651
-EBUILD coreutils-8.24.ebuild 5792 SHA256 9de85673f6b4c2f85097370eaeae1e14986b72dcf8aba8e6a2f6956d36cf975c SHA512 6b4bd0ba9d76acc1af466ebf667dc3d95d33fa5da5ecd73b53c06b310158f2f05e5cf58e068d39b05674198e6372c53fb9a8168263d858056b681f0b97c2afb2 WHIRLPOOL 932a1ac38779d50be2278cf0c6764926352c3e2d30d699fc78c026c332dac4697393f4b9cbafe602004d3267c7a4bc51889a9df52e24142b0822cf5b2628ab5d
-MISC ChangeLog 56969 SHA256 a17e88fabca765fefe15dbe3809e03d264ef5771496a89df3c1cbabc4396b99e SHA512 4b9b3e009b6e77d503d12164634f82020f648efb83635190157df7aca1ae422debd29787722d203532d53ddb8918ce82bf3199a84705dd100c85d5a1b5309ef1 WHIRLPOOL c2eb798b83e56fd780ef38014379598c118c3a6de0936598139d318b7829fa20c42a93adfdbf38ae023ac761a796291721cd29cdf4ede60a087c188be6d1da86
+EBUILD coreutils-8.24.ebuild 5792 SHA256 cf40aafc75a63ebf56d5dec7c8447d188a5b7fed80bcf3062aecd0d612c45d53 SHA512 296ba0147e2ac4143e0b03119387d21d93f8a5a077a313946158c8b33d5a2405975e9eac4e8dcc97160cc1593706dface6d23f8e8ad40ed038799f0bd14486da WHIRLPOOL 79fa2767248b3e5abe30c8201afdc6e34e803535ea2e852ab657459e5b41b08d59c697866f841404edefe1beb04ad368059e2967c070c8e7498a427b1fc78508
+MISC ChangeLog 57093 SHA256 368347193225a6204bd2454ecbdf549ca614cb8fc5e183ac14c2f767288323e9 SHA512 ef4eff9a3d748641bf1b745599e951308801e1d00d67c5504d17e4d740f5cd7f0c75cd5ee34c8345e8017ee8b6397b84a41df84b4f342ff899a04fd35a0c8f28 WHIRLPOOL 43464de8d0d85fa5b35797c95049591d0a225e4e6f0ab596d8c637da0538f0605c15c35749195fea181b9d5e6a75ea7573a96dbe9da70f28e131a47c913d43b5
 MISC metadata.xml 369 SHA256 173d5e3961242d2b7f664386720c650cd65e87865ffcb08dce7e729c5bcdd459 SHA512 6328e626da8b7740212f9094e5ffff86aa34ef098b58fee002fe2949aa932b1cbaa341ea3a0f5cb1cee61cce0bfd004571e1994e15c4ecd3a651a7e3750f3ddc WHIRLPOOL 215df267946c9688e775daed5696a9b971adf4ea83a679f963e82db507c61651cde042596514e032a901f7461ef6d401a5a45012989a5ec4abf131329d09872b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVuhiGAAoJELp701BxlEWfgVYP/A8ss2UcNAdpfRxQhE+ozZLa
-wTU3kssfmINQVHWRB1UsCFVeAc7/KEG1PUSIUtFWznvV8Yf6+sNVSvz9pljeBKYz
-j8Yf6lcPIch6wJ0iNAX9Wxg1IIoL30y5LunAZlglfsykj0j1X6nzU4+JU69Jm+qU
-wFytp2TgBU/EoIDpVFbp/0TaGy18HPHM4Rur3okO0tDxetlYTVacNEHQrne33JnK
-E9lZRlGebq2XyoWwJNpxd4s/gJgl/Y61lGCzm6thRXwHAxTGx6CSPXinnZ8gYTsb
-2J0qxglbycVWF5mSsNRzlMTTZiaGkUwgzNzWJeHMcSvwG4XKX2PY7fKPMz/GUHmN
-hhyKpQLje+Wh9KwSnjE0o0sMsdT5ao1+dyqX0hAXjraoITD7tMUYFnRFE7Mu6XlW
-2OYilrSqjlWTnFqYxMhi2W0PaV2NNtjfibOV4AJU4rn8ZXrwV+5M/ZAVH2oo7XS4
-iqTjzF8BbAEIyJdbfsCggtv2bnU1OSqhCXdUnr3hkpy+yG5MbEbbutpGOY46/u+7
-dsnv2xCf+nPnWC2qFo+5Y/Hs4npdhm5WSCXeu8/0tWQuR3fGZxCiDaE9R+sqRho6
-4wx/Obhn3PWIf/I7EWLGyg2NwTJ+Ih85gAvS8XJUVKO5xjGCwB7JugGHBR4kfFRq
-41I4Y41JLhSH0p8a2reL
-=Ffr6
+iQIcBAEBCAAGBQJVwcAPAAoJEPGu1DbS6WIAAIoP/3CmQY5FWpCbLft4t3dnGeXH
++0c6NKR29G7HgCmztcdmHB4yheOXcaqTrud5EUthLz5r8w0D7F1aHYuASsCeGdt7
+SJMb5E/6dbiVNiFzZuM20sC1cGKhO8XslhljJwHTiKX9n/a0cdHsA+210msaCBgH
+nQoLBjrMRAsXu7QJdEO6UgGN/qCv0tTuAq/XpuPwZ9jxA4n2xLmH2lKUqZRwZ522
+mfyfsw/J/QJNTVIv4p767n9oMBVC4qWGauMTlXkQMfdMho6K1x5FuuoJIN+oWcGO
+uV0tTq95+xwNlgY5+ummfF/ZaGfBqsZg3/zrv3w/GaxrCLcjy3p0q9boeEnMSu4k
+1+xI6LJEVjeMchKJuxGpwMj3IFsxqj+chtWKS8nOCGMW7N3noBY8/Ou87UHv2e76
+riKEMsE03WA7cJzMPqu8Dj9I9O4SNbeWaOQpTm19yOWEVUSEx0AhT47D3yWGlaSC
+mat2Oj9p583gHGoj+9T6W+x2JsWWROZbnq1tbKs6aPRjFAQO32zj2TGC8QZ85/s/
+9wcnEjSHJt+d6duqzM5uMpG0hwOwKLcDFpdHvyIPZe2c6SDgaxwsrIu500fWC6PC
+h30Pg+V3LxXJRcskUOdd0z2ClkYB4S2JTq3n3fpRSMcj5yXWgdsRO4OeF0iBSoL3
+RZ3jKjKTQxvrbhFxEBlm
+=vcJX
 -----END PGP SIGNATURE-----
